<resources>
    <string name="app_name">Web3Auth Android Auth0 Example</string>
    <string name="web3auth_project_id">BPi5PB_UiIZ-cPz1GtV5i1I2iOSOHuimiXBI0e-Oe_u6X3oVAbCiAZOTEBtTXw4tsluTITPqA8zMsfxIKMjiqNQ</string>
    <string name="web3auth_auth0_client_id">hUVVf4SEsZT7syOiL0gLU9hFEtm2gQ6O</string>
    <string name="web3auth_android_demo">Web3Auth Android Auth0 Demo</string>
    <string name="login_with_google">Login with Auth0</string>
    <string name="logout">Logout</string>
    <string name="not_logged_in">Log in to see Web3Auth Data</string>
    <string name="enable_mfa">Enable MFA</string>
    <string name="launch_wallet_services">Launch Wallet Services</string>
    <string name="address">Address</string>
    <string name="balance">Balance</string>
    <string name="sign_message">Sign Message</string>
    <string name="send_transaction">Send Transaction</string>
</resources>